# marketing

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.market/context/: web_search_72af1634c3ee.json
app/: __init__.py  main.py  window.py
app/bridge/: __init__.py  agent_bridge.py
app/components/: __init__.py  list_panel.py  markdown_viewer.py  message_bubble.py  preview_panel.py
app/pages/: __init__.py  chat.py  prompts.py  resources.py  settings.py  skills.py  tools.py
app/themes/: __init__.py  dark.qss  light.qss
examples/: basic_use.py
patterns/agents/: basic_workflows.ipynb  orchestrator_workers.ipynb  util.py
src/agent/: README.md  __init__.py  agent.py  config.ini  prompts.py  scratchpad.py  state.py  task_executor.py  tool_executor.py  types.py
src/agent/phases/: answer.py  base.py  execute.py  plan.py  reflect.py  understand.py
src/example/: example_context_manager.py  example_logger.py  example_message_history.py
src/model/: __init__.py  llm.py
src/skills/: loader.py  registry.py  types.py
src/tests/: tool_executor.py
src/tests/unit/: test_message_history.py  test_tool_executor.py
src/tools/: buildin.py  index.py  registry.py  skill.py  tool_executor.py  types.py
src/tools/browser/: __init__.py  content.py  navigate.py  session.py  snapshot.py
src/tools/description/: __init__.py  buildin.py
src/tools/search/: tavily.py
src/utils/: __init__.py  context.py  logger.py  memory.py  message_history.py  session.py
